Optimize performance with Lazy Loading, Delayed Chat, and Preconnects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio-v2</title>
+    <meta name="description" content="Anthony Phillips - Full Stack Developer Portfolio. Interactive Terminal, Projects, and Professional Journey." />
+    
+    <!-- Performance: Preconnect to Font Hosts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <title>Anthony Phillips | Developer Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
